# ednew

./: README.md
CPP/2019 uniyar/: README.md
CPP/2019 uniyar/01 первый связный список/: main.cpp
CPP/2019 uniyar/02 графы/: main.cpp
CPP/2019 uniyar/03 stack на основе двусвязного списка/: MyStack.cpp  MyStack.h  main.cpp
CPP/2019 uniyar/04 календарь/: main.cpp  txt.txt
CPP/2019 uniyar/05 сортировки матриц/: ary.txt  main.cpp
CPP/2019 uniyar/06 фабрика дверей паттерно/: main.cpp
CPP/2019 uniyar/07 мост, фасад, наследование/: main.cpp
CPP/2019 uniyar/08 хеширование + список/: list.cpp  list.h  main.cpp  txt.txt
CPP/2019 uniyar/09 парсинг xml, txt/: main.cpp  txt.txt  xml.xml
CPP/2019 uniyar/10 парсинг xml, txt/: dies.cpp  dies.h  main.cpp  txt.txt  xml.xml
CPP/2019 uniyar/11 winapi азы/: main.cpp
CPP/2022 POCO/: CMakeLists.txt  LICENSE  README.md  index.html
CPP/2022 POCO/EXAMPLES/: 1 Listener.cpp  2 Обработчики.cpp  3 Сложный запрос с параметрами.cpp  5 Постгресс-таблица.cpp  CMakeLists.txt
CPP/2022 POCO/src/: main.cpp
CPP/2022 POCO/src/poco-lib/: PocoActiveRecord.exp  PocoActiveRecord.lib  PocoActiveRecordd.exp  PocoActiveRecordd.lib  PocoData.exp  PocoData.lib  PocoDataSQLite.exp  PocoDataSQLite.lib  PocoDataSQLited.exp  PocoDataSQLited.lib  PocoDatad.exp  PocoDatad.lib  PocoEncodings.exp  PocoEncodings.lib  PocoEncodingsd.exp  PocoEncodingsd.lib  PocoFoundation.exp  PocoFoundation.lib  PocoFoundationd.exp  PocoFoundationd.lib  PocoJSON.exp  PocoJSON.lib  PocoJSONd.exp  PocoJSONd.lib  PocoMongoDB.exp  PocoMongoDB.lib  PocoMongoDBd.exp  PocoMongoDBd.lib  PocoNet.exp  PocoNet.lib  PocoNetd.exp  PocoNetd.lib  PocoPrometheus.exp  PocoPrometheus.lib  PocoPrometheusd.exp  PocoPrometheusd.lib  PocoRedis.exp  PocoRedis.lib  PocoRedisd.exp  PocoRedisd.lib  (+12 more)
CPP/2022 bitmap/: CMakeLists.txt  README.md  main.cpp
CPP/2022 cmake-utils/: README.md
CPP/2022 cmake-utils/01 FetchContent/: CMakeLists.txt  main.cpp
CPP/2022 cmake-utils/02 CPM/: CMakeLists.txt  main.cpp
CPP/2022 cmake-utils/03 cpm-cmake/: CMakeLists.txt
CPP/2022 cmake-utils/04 conan/: CMakeLists.txt  main.cpp
CPP/2022 cmake/freeglut-visualis/: CMakeLists.txt
CPP/2022 googlebenchmark/: .gitignore  CMakeLists.txt  README.md
CPP/2022 googlebenchmark/src/: main.cpp
CPP/2022 googletest/: CMakeLists.txt  README.md
CPP/2022 googletest/EXAMPLES/: 01 helloworld.cpp  02 classtest_f.cpp
CPP/2022 googletest/src/: main.cpp
CPP/2022 grokking algorithms/01 binary search/: CMakeLists.txt  main.cpp
CPP/2022 grokking algorithms/02 selection sort/: CMakeLists.txt  main.cpp
CPP/2022 grokking algorithms/03 recursion/: readme.txt
CPP/2022 grokking algorithms/05 hash tables/: CMakeLists.txt  main.cpp
CPP/2022 grokking algorithms/06 graph BFS/: CMakeLists.txt  main.cpp
CPP/2022 grokking algorithms/07 Dijkstras algorithm/: CMakeLists.txt  main.cpp
CPP/2022 grokking algorithms/08 greedy/: CMakeLists.txt  main.cpp
CPP/2022 libpqxx/: CMakeLists.txt  README.md
CPP/2022 libpqxx/sources/: main.cpp
CPP/2022 multithreating/: .gitignore  README.md
CPP/2022 multithreating/01/: CMakeLists.txt  main.cpp
CPP/2022 multithreating/02/: CMakeLists.txt  main.cpp
CPP/2022 multithreating/03/: CMakeLists.txt  main.cpp
CPP/2022 multithreating/04/: CMakeLists.txt  main.cpp
CPP/2022 multithreating/05/: CMakeLists.txt  main.cpp
CPP/2022 sedjvick/: summary.adoc
CPP/2022 sedjvick/1.1/: main.cpp
CPP/2022 sedjvick/2.3.3/: main.cpp
CPP/2022 sedjvick/2.3.4/: main.cpp
CPP/2022 sedjvick/2.3.6/: main.cpp
CPP/2022 sedjvick/2.3.7/: main.cpp
CPP/2022 sedjvick/3.2/: main.cpp
CPP/2022 sedjvick/3.6/: main.cpp
CPP/2022 sedjvick/3.7/: CMakeLists.txt
CPP/2022 websocket/: CMakeLists.txt  README.md
CPP/2022 websocket/src/: main.cpp  winlogic.cpp  winlogic.hpp  winsocks.cpp  winsocks.hpp
CPP/2022 websocket/test/: test.py
OTHER/2022 DOCKER/: README.md
OTHER/2022 DOCKER/1/: Dockerfile
OTHER/2022 DOCKER/2/: Dockerfile
OTHER/2022 DOCKER/3/: Dockerfile
OTHER/2022 DOCKER/4/: Dockerfile
OTHER/2022 DOCKER/5/: .dockerignore  Dockerfile
OTHER/2022 HTML_CSS/: README.md
OTHER/2022 HTML_CSS/01 hello world/: index.html
OTHER/2022 HTML_CSS/02 теги/: tags.html
OTHER/2022 HTML_CSS/03 ссылки изображения/: index.html  page.html
OTHER/2022 HTML_CSS/04 таблицы/: index.html
OTHER/2022 HTML_CSS/05 web форма/: index.html
OTHER/2022 HTML_CSS/06 css начало/: index.html  stylefile.html
OTHER/2023 JS/base/: 01 prompt.js  02 alert.js  03 types.js  04 basemath.js  05 comparison.js  06 branching.js  07 logic operators.js  08 cycles.js  09 functions.js  10 function expression.js  main.html
OTHER/2023 JS/browser/: 01 DOM BOM.js  02 DOM.js  03 search.js  04 DOM attributes.js  05 attributes.js  childs.html  main.html  search.html
OTHER/2023 react + fastapi/backend/: .gitignore  main.py
OTHER/2023 react + fastapi/frontend/: package-lock.json  package.json
PYTHON/2021 u1337/: README.md  hw_00.py  hw_01.py  hw_02.py  hw_03.py  hw_04.py  hw_05a.py  hw_05b.py  hw_06.py  lab_01.py  lab_02.py  lab_03.py  lab_04.py  lab_05.py  lab_07.py  lab_08.py
PYTHON/2021 u1337/lab_06/: classes.py  psp.py
PYTHON/2021 u1337/lab_10/: expr.py  repl.py
PYTHON/2021 u1337/proj_1.игра_в_свинью/: hog.py
PYTHON/2021 u1337/proj_2.интерпретатор_scheme/: quest.scm  questions.scm  scheme.py  scheme_reader.py  tests.scm
PYTHON/2022 cifra/: README.md
PYTHON/2022 cifra/lec2-fastapi-start/: text.txt
PYTHON/2022 fastapi/: main.py
PYTHON/2022 other/: backpack.py  commonprefix_1.py  commonprefix_2.py  contex_manager.py  intervals.py
PYTHON/2023 asyncio/: 1.py  2.py  4.py
PYTHON/2023 tin/: 1.py  2.py  3.py  4.py  5.py  6.py
SCHEME/2021 u1337/: README.md  hw_07.scm  hw_08.scm  hw_09.scm  hw_10.scm  lab_09.scm  lab_11.scm
SQL/2021 u1337/: README.md
SQL/2021 u1337/lab_12/: lab_12.sql  sedafag.sql
SQL/2022 postgres/: README.md
SQL/2022 postgres/01/: 1.sql
SQL/2022 postgres/02/: 2.sql
SQL/2022 postgres/03/: 3.sql
SQL/2022 postgres/04/: 4.sql
SQL/2022 postgres/05/: 5.sql
SQL/2022 postgres/07/: 7.sql
(+57 files in other folders)
